in a really good place now using sample song, gui still there, next step will be to remove that

--- a/index.html
+++ b/index.html
@@ -130,8 +130,12 @@
       id="fragmentshader"
       type="fragment"
     >
+      uniform float u_red;
+      uniform float u_blue;
+      uniform float u_green;
+
       void main() {
-        gl_FragColor = vec4(1.0);
+          gl_FragColor = vec4(vec3(u_red, u_green, u_blue), 1.0);
       }
     </script>
 
